--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     <nav id="MagicMenu" class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container">
         <a class="navbar-brand" href="{{ site.baseurl }}/index.html">
-            <img src="../{{site.logo}}" alt="{{site.name}}" class="logo">
+            <img src="../{{site.logo}}" alt="{{site.name}}" class="main-logo">
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
         <div class="row align-items-center justify-content-between">
             <div>
                 <span class="navbar-brand mr-2 mb-0">
-                    <img src="../{{site.logo}}" alt="{{site.name}}" class="logo">
+                    <img src="../{{site.logo}}" alt="{{site.name}}" class="main-logo">
                 </span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
 
