--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,17 +79,17 @@
         <div class="container">
         <div class="row align-items-center justify-content-between">
             <div>
-                <span class="navbar-brand mr-2 mb-0">
-                    <img src="../{{site.logo}}" alt="{{site.name}}" class="main-logo">
-                </span>
-                <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
-
-                <!--  Github Repo Star Btn-->
-                <a class="text-dark ml-1" target="_blank" href="https://github.com/wowthemesnet/mundana-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
-
+                Practice Radical Inclusion
             </div>
             <div>
-                Made with <a target="_blank" class="text-dark font-weight-bold" href="https://www.wowthemes.net/mundana-jekyll-theme/"> Mundana Jekyll Theme </a> by <a class="text-dark" target="_blank" href="https://www.wowthemes.net">WowThemes</a>.
+                <h3>
+                    <a href="https://a4e.org.in/privacy-policy">Privacy Policy</a>&nbsp;&nbsp;
+                    <a href="https://a4e.org.in/terms-of-use">Terms of Use</a>&nbsp;&nbsp;
+                    <a href="https://a4e.org.in/accessibility-statement">Accessibility</a>&nbsp;&nbsp;
+                </h3>
+            </div>
+            <div>
+                © Access for Everyone <script>document.write(new Date().getFullYear())</script>
             </div>
         </div>
         </div>
