--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% if page.url == "/" %}{{site.name}} | Disability, Accessibility, and Inclusion{% else %}{{page.title}} | {{site.name}}{% endif %}</title>
+    <title>{% if page.url == "/" %}{{site.name}} | Disability Inclusion and Accessibility{% else %}{{page.title}} | {{site.name}}{% endif %}</title>
 
     {% seo %}
 
@@ -77,18 +77,18 @@
     <!-- Footer -->
     <footer class="bg-white border-top p-3 text-muted small">
         <div class="container">
-        <div class="row align-items-center justify-content-between">
-            <div>
+        <div class="row footer-container align-items-center justify-content-between">
+            <div class="footer-box">
                 Practice Radical Inclusion
             </div>
-            <div>
+            <div class="footer-box">
                 <h3>
                     <a href="https://a4e.org.in/privacy-policy">Privacy Policy</a>&nbsp;&nbsp;
                     <a href="https://a4e.org.in/terms-of-use">Terms of Use</a>&nbsp;&nbsp;
                     <a href="https://a4e.org.in/accessibility-statement">Accessibility</a>&nbsp;&nbsp;
                 </h3>
             </div>
-            <div>
+            <div class="footer-box">
                 © Access for Everyone <script>document.write(new Date().getFullYear())</script>
             </div>
         </div>
