--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,17 +82,11 @@
                 Practice Radical Inclusion
             </div>
             <div class="footer-box">
-                <div class="row align-items-center justify-content-between">
-                    <h6>
-                        <a href="https://a4e.org.in/privacy-policy">Privacy Policy</a>
-                    </h6>
-                    <h6>
-                        <a href="https://a4e.org.in/terms-of-use">Terms of Use</a>&nbsp;&nbsp;
-                    </h6>
-                    <h6>
-                        <a href="https://a4e.org.in/accessibility-statement">Accessibility</a>&nbsp;&nbsp;
-                    </h6>
-                </div>
+                <h5 class="footer-links">
+                    <a href="https://a4e.org.in/privacy-policy">Privacy Policy</a>&nbsp;&nbsp;
+                    <a href="https://a4e.org.in/terms-of-use">Terms of Use</a>&nbsp;&nbsp;
+                    <a href="https://a4e.org.in/accessibility-statement">Accessibility</a>&nbsp;&nbsp;
+                </h5>
             </div>
             <div class="footer-box">
                 © Access for Everyone <script>document.write(new Date().getFullYear())</script>
