--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -140,7 +140,7 @@ a.text-dark:hover {
     border-color:transparent;
 }
 .btn-link.btn-white {
-    color:#fff;
+    color:#f8f8f8;
     border-color:transparent;
 }
 .btn-link.btn-purple {
@@ -172,7 +172,7 @@ a.text-dark:hover {
     border-color:transparent;
 }
 .btn-white {
-    background-color:#fff;
+    background-color:#f8f8f8;
 }
 .input-round {
     border-radius:30px !important;
@@ -196,7 +196,7 @@ a.text-dark:hover {
 }
 .navbar .highlight .nav-link:hover {
     background:#03a87c;
-    color:#fff !important;
+    color:#f8f8f8 !important;
 }
 .navbar-brand {
     margin-right:2rem;
@@ -217,8 +217,8 @@ a.text-dark:hover {
         top:-8px;
         position:absolute;
         left:50px;
-        border-top:16px solid #fff;
-        border-left:16px solid #fff;
+        border-top:16px solid #f8f8f8;
+        border-left:16px solid #f8f8f8;
         -webkit-transform:rotate(45deg);
         transform:rotate(45deg);
     }
@@ -300,7 +300,7 @@ a.text-dark:hover {
     }
 }
 .bg-black {
-    background-color:#000;
+    background-color:#333333;
 }
 .overlay {
     position:relative;
@@ -354,7 +354,7 @@ a.text-dark:hover {
     fill:#212529 !important;
 }
 .bg-white {
-    fill:#fff !important;
+    fill:#f8f8f8 !important;
 }
 .bg-purple {
     fill:#ad6edd !important;
@@ -387,7 +387,7 @@ a.text-dark:hover {
     height:55px;
     padding:12.5px 0;
     border-radius:100%;
-    color:#FFFFFF;
+    color:#f8f8f8;
     font-weight:700;
     text-align:center;
     -webkti-box-sizing:border-box;
@@ -432,7 +432,7 @@ a.text-dark:hover {
     font-size:2.2rem;
 }
 .alert-primary {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#03a87c;
     border-color:#03a87c;
 }
@@ -443,7 +443,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-secondary {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#7832e2;
     border-color:#7832e2;
 }
@@ -454,7 +454,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-success {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#03a87c;
     border-color:#03a87c;
 }
@@ -465,7 +465,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-info {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#09ebaf;
     border-color:#09ebaf;
 }
@@ -476,7 +476,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-warning {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#ffde03;
     border-color:#ffde03;
 }
@@ -487,7 +487,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-danger {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#ea2f65;
     border-color:#ea2f65;
 }
@@ -498,7 +498,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-light {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#f8f9fa;
     border-color:#f8f9fa;
 }
@@ -509,7 +509,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-dark {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#212529;
     border-color:#212529;
 }
@@ -520,7 +520,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-white {
-    color:#fff;
+    color:#f8f8f8;
     background-color:white;
     border-color:white;
 }
@@ -531,7 +531,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-purple {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#ad6edd;
     border-color:#ad6edd;
 }
@@ -542,7 +542,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-salmon {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#ff977a;
     border-color:#ff977a;
 }
@@ -553,7 +553,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-cyan {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#35bdff;
     border-color:#35bdff;
 }
@@ -564,7 +564,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-gray {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#ced4da;
     border-color:#ced4da;
 }
@@ -575,7 +575,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-indigo {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#502c6c;
     border-color:#502c6c;
 }
@@ -586,7 +586,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-orange {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#fbb500;
     border-color:#fbb500;
 }
@@ -597,7 +597,7 @@ a.text-dark:hover {
     color:#e6e6e6;
 }
 .alert-lightblue {
-    color:#fff;
+    color:#f8f8f8;
     background-color:#e8f3ec;
     border-color:#e8f3ec;
 }
@@ -695,7 +695,7 @@ article h1,article h2,article h3,article h4,article h5,article h6,article .h1,ar
     position:fixed;
     bottom:0;
     left:0;
-    background-color:#fff;
+    background-color:#f8f8f8;
     width:100%;
     padding:20px 0;
     z-index:1021;
@@ -768,7 +768,7 @@ article h1,article h2,article h3,article h4,article h5,article h6,article .h1,ar
         height:100%;
         padding:0 .5rem .5rem 1.5rem;
         border-right:1px solid #e9ecef;
-        background-color:#fff;
+        background-color:#f8f8f8;
         padding-bottom:50px;
     }
     .content-withfixedsidebar {
