--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,8 +4,14 @@
 <a class="nav-link" href="{{site.baseurl}}">Home</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list">Authors</a>
+<a class="nav-link" href="https://a4e.org.in/about-us">About</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact">Contact</a>
+<a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
 </li>
