--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,8 +10,5 @@
 <a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/categories">Categories</a>
+<a class="nav-link" href="https://a4e.org.in/contact-us">Contact Us</a>
 </li>
