--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,7 +139,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #03a87c;
+  color: #B45E34;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
@@ -1480,7 +1480,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 85%;
-  color: #03a87c; }
+  color: #B45E34; }
 
 .valid-tooltip {
   position: absolute;
@@ -1499,11 +1499,11 @@ textarea.form-control {
 .was-validated .form-control:valid, .form-control.is-valid, .was-validated
 .custom-select:valid,
 .custom-select.is-valid {
-  border-color: #03a87c; }
+  border-color: #B45E34; }
   .was-validated .form-control:valid:focus, .form-control.is-valid:focus, .was-validated
   .custom-select:valid:focus,
   .custom-select.is-valid:focus {
-    border-color: #03a87c;
+    border-color: #B45E34;
     box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.25); }
   .was-validated .form-control:valid ~ .valid-feedback,
   .was-validated .form-control:valid ~ .valid-tooltip, .form-control.is-valid ~ .valid-feedback,
@@ -1521,7 +1521,7 @@ textarea.form-control {
   display: block; }
 
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #03a87c; }
+  color: #B45E34; }
 
 .was-validated .form-check-input:valid ~ .valid-feedback,
 .was-validated .form-check-input:valid ~ .valid-tooltip, .form-check-input.is-valid ~ .valid-feedback,
@@ -1529,7 +1529,7 @@ textarea.form-control {
   display: block; }
 
 .was-validated .custom-control-input:valid ~ .custom-control-label, .custom-control-input.is-valid ~ .custom-control-label {
-  color: #03a87c; }
+  color: #B45E34; }
   .was-validated .custom-control-input:valid ~ .custom-control-label::before, .custom-control-input.is-valid ~ .custom-control-label::before {
     background-color: #2ffbc5; }
 
@@ -1545,7 +1545,7 @@ textarea.form-control {
   box-shadow: 0 0 0 1px #f8f8f8, 0 0 0 0.2rem rgba(3, 168, 124, 0.25); }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
-  border-color: #03a87c; }
+  border-color: #B45E34; }
   .was-validated .custom-file-input:valid ~ .custom-file-label::after, .custom-file-input.is-valid ~ .custom-file-label::after {
     border-color: inherit; }
 
@@ -1717,8 +1717,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #f8f8f8;
-  background-color: #03a87c;
-  border-color: #03a87c; }
+  background-color: #B45E34;
+  border-color: #B45E34; }
   .btn-primary:hover {
     color: #f8f8f8;
     background-color: #028260;
@@ -1727,8 +1727,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #f8f8f8;
@@ -1763,8 +1763,8 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #f8f8f8;
-  background-color: #03a87c;
-  border-color: #03a87c; }
+  background-color: #B45E34;
+  border-color: #B45E34; }
   .btn-success:hover {
     color: #f8f8f8;
     background-color: #028260;
@@ -1773,8 +1773,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
   .btn-success.disabled, .btn-success:disabled {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
   .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
   .show > .btn-success.dropdown-toggle {
     color: #f8f8f8;
@@ -2084,24 +2084,24 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
 
 .btn-outline-primary {
-  color: #03a87c;
+  color: #B45E34;
   background-color: transparent;
   background-image: none;
-  border-color: #03a87c; }
+  border-color: #B45E34; }
   .btn-outline-primary:hover {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #03a87c;
+    color: #B45E34;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
@@ -2130,24 +2130,24 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(120, 50, 226, 0.5); }
 
 .btn-outline-success {
-  color: #03a87c;
+  color: #B45E34;
   background-color: transparent;
   background-image: none;
-  border-color: #03a87c; }
+  border-color: #B45E34; }
   .btn-outline-success:hover {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
   .btn-outline-success:focus, .btn-outline-success.focus {
     box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
   .btn-outline-success.disabled, .btn-outline-success:disabled {
-    color: #03a87c;
+    color: #B45E34;
     background-color: transparent; }
   .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
   .show > .btn-outline-success.dropdown-toggle {
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
     .btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-success.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(3, 168, 124, 0.5); }
@@ -2453,7 +2453,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #03a87c;
+  color: #B45E34;
   background-color: transparent; }
   .btn-link:hover {
     color: #025d45;
@@ -2664,7 +2664,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #f8f8f8;
     text-decoration: none;
-    background-color: #03a87c; }
+    background-color: #B45E34; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2928,7 +2928,7 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #f8f8f8;
-    background-color: #03a87c; }
+    background-color: #B45E34; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 1px #f8f8f8, 0 0 0 0.2rem rgba(3, 168, 124, 0.25); }
   .custom-control-input:active ~ .custom-control-label::before {
@@ -2972,13 +2972,13 @@ input[type="button"].btn-block {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #03a87c; }
+  background-color: #B45E34; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #03a87c; }
+  background-color: #B45E34; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
@@ -2993,7 +2993,7 @@ input[type="button"].btn-block {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #03a87c; }
+  background-color: #B45E34; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
@@ -3119,7 +3119,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #03a87c;
+    background-color: #B45E34;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3141,7 +3141,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #03a87c;
+    background-color: #B45E34;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3166,7 +3166,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #03a87c;
+    background-color: #B45E34;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3247,7 +3247,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #f8f8f8;
-  background-color: #03a87c; }
+  background-color: #B45E34; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3754,7 +3754,7 @@ input[type="button"].btn-block {
   padding: 0.55rem .8rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #03a87c;
+  color: #B45E34;
   background-color: #f8f8f8;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -3782,8 +3782,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #f8f8f8;
-  background-color: #03a87c;
-  border-color: #03a87c; }
+  background-color: #B45E34;
+  border-color: #B45E34; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3842,7 +3842,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #f8f8f8;
-  background-color: #03a87c; }
+  background-color: #B45E34; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
     color: #f8f8f8;
     text-decoration: none;
@@ -3858,7 +3858,7 @@ input[type="button"].btn-block {
 
 .badge-success {
   color: #f8f8f8;
-  background-color: #03a87c; }
+  background-color: #B45E34; }
   .badge-success[href]:hover, .badge-success[href]:focus {
     color: #f8f8f8;
     text-decoration: none;
@@ -4005,9 +4005,9 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #03a87c;
-  background-color: #03a87c;
-  border-color: #03a87c; }
+  color: #B45E34;
+  background-color: #B45E34;
+  border-color: #B45E34; }
   .alert-primary hr {
     border-top-color: #038f6a; }
   .alert-primary .alert-link {
@@ -4023,9 +4023,9 @@ input[type="button"].btn-block {
     color: #5f1cc5; }
 
 .alert-success {
-  color: #03a87c;
-  background-color: #03a87c;
-  border-color: #03a87c; }
+  color: #B45E34;
+  background-color: #B45E34;
+  border-color: #B45E34; }
   .alert-success hr {
     border-top-color: #038f6a; }
   .alert-success .alert-link {
@@ -4175,7 +4175,7 @@ input[type="button"].btn-block {
   color: #f8f8f8;
   text-align: center;
   white-space: nowrap;
-  background-color: #03a87c;
+  background-color: #B45E34;
   transition: width 0.6s ease; }
   @media screen and (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -4237,8 +4237,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #f8f8f8;
-    background-color: #03a87c;
-    border-color: #03a87c; }
+    background-color: #B45E34;
+    border-color: #B45E34; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -4998,7 +4998,7 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #03a87c !important; }
+  background-color: #B45E34 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -5014,7 +5014,7 @@ button.bg-secondary:focus {
   background-color: #5f1cc5 !important; }
 
 .bg-success {
-  background-color: #03a87c !important; }
+  background-color: #B45E34 !important; }
 
 a.bg-success:hover, a.bg-success:focus,
 button.bg-success:hover,
@@ -5162,13 +5162,13 @@ button.bg-lightblue:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #03a87c !important; }
+  border-color: #B45E34 !important; }
 
 .border-secondary {
   border-color: #7832e2 !important; }
 
 .border-success {
-  border-color: #03a87c !important; }
+  border-color: #B45E34 !important; }
 
 .border-info {
   border-color: #09ebaf !important; }
@@ -7142,7 +7142,7 @@ button.bg-lightblue:focus {
   color: #f8f8f8 !important; }
 
 .text-primary {
-  color: #03a87c !important; }
+  color: #B45E34 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #027657 !important; }
@@ -7154,7 +7154,7 @@ a.text-secondary:hover, a.text-secondary:focus {
   color: #5f1cc5 !important; }
 
 .text-success {
-  color: #03a87c !important; }
+  color: #B45E34 !important; }
 
 a.text-success:hover, a.text-success:focus {
   color: #027657 !important; }
