--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,7 +144,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #025d45;
+    color: #78C460;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2456,7 +2456,7 @@ fieldset:disabled a.btn {
   color: #B45E34;
   background-color: transparent; }
   .btn-link:hover {
-    color: #025d45;
+    color: #78C460;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3760,7 +3760,7 @@ input[type="button"].btn-block {
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #025d45;
+    color: #78C460;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
