--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
                         {% if author.avatar %}
                         <img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="70"/>
                         {% endif %}
-                        <small class="ml-3"> {{ author.name }} <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">Follow</a></span>
+                        <small class="ml-3"> {{ author.name }} <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">Follow the Author</a></span>
                             <span class="text-muted d-block mt-1">{{ page.date | date: '%b %d, %Y' }} · {% include meta-read-time.html %}</span>
                         </small>
                     </div>
@@ -83,17 +83,14 @@ layout: default
             <div class="border p-5 bg-lightblue">
                 <div class="row justify-content-between">
                     <div class="col-md-6 mb-2 mb-md-0">
-                        <h5 class="font-weight-bold">Join Newsletter</h5>
-                         Get the latest news right in your inbox. We never spam!
+                        <h5 class="font-weight-bold">Subscribe to our Newsletter</h5>
+                        Get the latest right in your inbox. We never spam, promise!
                     </div>
                     <div class="col-md-6">
                         <div class="row">
                             <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate w-100" target="_blank" novalidate>
                             <div class="mc-field-group">
-                            
                                 <input type="email" placeholder="Enter e-mail address" name="EMAIL" class="required email form-control w-100" id="mce-EMAIL" autocomplete="on" required>
-                            
-                            
                                 <button type="submit" value="Subscribe" name="subscribe" class="heart btn btn-success btn-block w-100 mt-2">Subscribe</button>
                             
                             </div>
