--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2062,8 +2062,8 @@ fieldset:disabled a.btn {
 
 .btn-lightblue {
   color: #333333;
-  background-color: #e8f3ec;
-  border-color: #e8f3ec; }
+  background-color: #E5CCE4;
+  border-color: #E5CCE4; }
   .btn-lightblue:hover {
     color: #333333;
     background-color: #cfe6d7;
@@ -2072,8 +2072,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
   .btn-lightblue.disabled, .btn-lightblue:disabled {
     color: #333333;
-    background-color: #e8f3ec;
-    border-color: #e8f3ec; }
+    background-color: #E5CCE4;
+    border-color: #E5CCE4; }
   .btn-lightblue:not(:disabled):not(.disabled):active, .btn-lightblue:not(:disabled):not(.disabled).active,
   .show > .btn-lightblue.dropdown-toggle {
     color: #333333;
@@ -2429,24 +2429,24 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(251, 181, 0, 0.5); }
 
 .btn-outline-lightblue {
-  color: #e8f3ec;
+  color: #E5CCE4;
   background-color: transparent;
   background-image: none;
-  border-color: #e8f3ec; }
+  border-color: #E5CCE4; }
   .btn-outline-lightblue:hover {
     color: #333333;
-    background-color: #e8f3ec;
-    border-color: #e8f3ec; }
+    background-color: #E5CCE4;
+    border-color: #E5CCE4; }
   .btn-outline-lightblue:focus, .btn-outline-lightblue.focus {
     box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
   .btn-outline-lightblue.disabled, .btn-outline-lightblue:disabled {
-    color: #e8f3ec;
+    color: #E5CCE4;
     background-color: transparent; }
   .btn-outline-lightblue:not(:disabled):not(.disabled):active, .btn-outline-lightblue:not(:disabled):not(.disabled).active,
   .show > .btn-outline-lightblue.dropdown-toggle {
     color: #333333;
-    background-color: #e8f3ec;
-    border-color: #e8f3ec; }
+    background-color: #E5CCE4;
+    border-color: #E5CCE4; }
     .btn-outline-lightblue:not(:disabled):not(.disabled):active:focus, .btn-outline-lightblue:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-lightblue.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
@@ -3534,7 +3534,7 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #f8f8f8;
   background-clip: border-box;
-  border: 1px solid #e8f3ec;
+  border: 1px solid #E5CCE4;
   border-radius: 0.25rem; }
   .card > hr {
     margin-right: 0;
@@ -3570,7 +3570,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid #e8f3ec; }
+  border-bottom: 1px solid #E5CCE4; }
   .card-header:first-child {
     border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
   .card-header + .list-group .list-group-item:first-child {
@@ -3579,7 +3579,7 @@ input[type="button"].btn-block {
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid #e8f3ec; }
+  border-top: 1px solid #E5CCE4; }
   .card-footer:last-child {
     border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px); }
 
@@ -3963,7 +3963,7 @@ input[type="button"].btn-block {
 
 .badge-lightblue {
   color: #333333;
-  background-color: #e8f3ec; }
+  background-color: #E5CCE4; }
   .badge-lightblue[href]:hover, .badge-lightblue[href]:focus {
     color: #333333;
     text-decoration: none;
@@ -4141,9 +4141,9 @@ input[type="button"].btn-block {
     color: #c89000; }
 
 .alert-lightblue {
-  color: #e8f3ec;
-  background-color: #e8f3ec;
-  border-color: #e8f3ec; }
+  color: #E5CCE4;
+  background-color: #E5CCE4;
+  border-color: #E5CCE4; }
   .alert-lightblue hr {
     border-top-color: #d7eade; }
   .alert-lightblue .alert-link {
@@ -5118,12 +5118,12 @@ button.bg-orange:hover,
 button.bg-orange:focus {
   background-color: #c89000 !important; }
 
-.bg-lightblue {
-  background-color: #e8f3ec !important; }
+.special-bg {
+  background-color: #E5CCE4 !important; }
 
-a.bg-lightblue:hover, a.bg-lightblue:focus,
-button.bg-lightblue:hover,
-button.bg-lightblue:focus {
+a.special-bg:hover, a.special-bg:focus,
+button.special-bg:hover,
+button.special-bg:focus {
   background-color: #c6e2d0 !important; }
 
 .bg-white {
@@ -5133,19 +5133,19 @@ button.bg-lightblue:focus {
   background-color: transparent !important; }
 
 .border {
-  border: 1px solid #e8f3ec !important; }
+  border: 1px solid #E5CCE4 !important; }
 
 .border-top {
-  border-top: 1px solid #e8f3ec !important; }
+  border-top: 1px solid #E5CCE4 !important; }
 
 .border-right {
-  border-right: 1px solid #e8f3ec !important; }
+  border-right: 1px solid #E5CCE4 !important; }
 
 .border-bottom {
-  border-bottom: 1px solid #e8f3ec !important; }
+  border-bottom: 1px solid #E5CCE4 !important; }
 
 .border-left {
-  border-left: 1px solid #e8f3ec !important; }
+  border-left: 1px solid #E5CCE4 !important; }
 
 .border-0 {
   border: 0 !important; }
@@ -5208,7 +5208,7 @@ button.bg-lightblue:focus {
   border-color: #fbb500 !important; }
 
 .border-lightblue {
-  border-color: #e8f3ec !important; }
+  border-color: #E5CCE4 !important; }
 
 .border-white {
   border-color: #f8f8f8 !important; }
@@ -7233,7 +7233,7 @@ a.text-orange:hover, a.text-orange:focus {
   color: #c89000 !important; }
 
 .text-lightblue {
-  color: #e8f3ec !important; }
+  color: #E5CCE4 !important; }
 
 a.text-lightblue:hover, a.text-lightblue:focus {
   color: #c6e2d0 !important; }
