--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -168,7 +168,7 @@ a.text-dark:hover {
     border-color:transparent;
 }
 .btn-link.btn-lightblue {
-    color:#e8f3ec;
+    color:#E5CCE4;
     border-color:transparent;
 }
 .btn-white {
@@ -374,8 +374,8 @@ a.text-dark:hover {
 .bg-orange {
     fill:#fbb500 !important;
 }
-.bg-lightblue {
-    fill:#e8f3ec !important;
+.special-bg {
+    fill:#E5CCE4 !important;
 }
 .card .date {
     position:absolute;
@@ -598,8 +598,8 @@ a.text-dark:hover {
 }
 .alert-lightblue {
     color:#f8f8f8;
-    background-color:#e8f3ec;
-    border-color:#e8f3ec;
+    background-color:#E5CCE4;
+    border-color:#E5CCE4;
 }
 .alert-lightblue hr {
     border-top-color:#d7eade;
@@ -705,7 +705,7 @@ article h1,article h2,article h3,article h4,article h5,article h6,article .h1,ar
     border-radius:2px;
 }
 .spanborder {
-    border-bottom:1px solid #e8f3ec;
+    border-bottom:1px solid #E5CCE4;
     margin-bottom:2rem;
 }
 .spanborder span {
