--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,7 +80,7 @@ layout: default
  
             <!-- Mailchimp Subscribe Form -->
             {% if site.mailchimp-list %}
-            <div class="border p-5 bg-lightblue">
+            <div class="border p-5 special-bg">
                 <div class="row justify-content-between">
                     <div class="col-md-6 mb-2 mb-md-0">
                         <h5 class="font-weight-bold">Subscribe to our Newsletter</h5>
