removing html refs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     <!-- Navbar -->
     <nav id="MagicMenu" class="topnav navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.baseurl }}/index.html">
+        <a class="navbar-brand" href="{{ site.baseurl }}">
             <img src="../{{site.logo}}" alt="{{site.name}}" class="main-logo">
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
