--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,7 +1,7 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}">Home</a>
+<a class="nav-link" href="https://journal.a4e.org.in/">Home</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="https://a4e.org.in/about-us">About</a>
